Use coreth package for interactions; update docker steps; decode atomic interchain transactions

--- a/Dockerfile.rosetta
+++ b/Dockerfile.rosetta
@@ -1,3 +1,6 @@
+#
+# NOTE: This is a standalone image for running the rosetta server
+#
 # ------------------------------------------------------------------------------
 # Builder Image
 # ------------------------------------------------------------------------------
