Update rosetta sdk to 0.6.5 to support latest 'Synced' status

--- a/rosetta-cli-conf/testnet/config.json
+++ b/rosetta-cli-conf/testnet/config.json
@@ -43,9 +43,9 @@
     "coin_tracking_disabled": false,
     "results_output_file": "",
     "end_conditions": {
-      "tip": true,
       "reconciliation_coverage": {
         "coverage": 0.95,
+        "from_tip": true,
         "tip": true
       }
     }
