--- a/rosetta-cli-conf/testnet/config.json
+++ b/rosetta-cli-conf/testnet/config.json
@@ -4,15 +4,16 @@
     "network": "Fuji"
   },
   "online_url": "http://localhost:8080",
-  "http_timeout": 10,
-  "max_retries": 5,
+  "http_timeout": 500,
+  "max_retries": 50,
   "retry_elapsed_time": 0,
-  "max_online_connections": 40,
-  "max_sync_concurrency": 20,
+  "max_online_connections": 1000,
+  "max_sync_concurrency": 50,
   "tip_delay": 3600,
   "log_configuration": false,
   "compression_disabled": false,
   "memory_limit_disabled": false,
+  "data_directory": "rosetta-data",
   "construction": {
     "offline_url": "http://localhost:8080",
     "stale_depth": 3,
