--- a/rosetta-cli-conf/testnet/config.json
+++ b/rosetta-cli-conf/testnet/config.json
@@ -13,7 +13,7 @@
   "log_configuration": false,
   "compression_disabled": false,
   "memory_limit_disabled": false,
-  "data_directory": "rosetta-data",
+  "data_directory": ".rosetta-data",
   "construction": {
     "offline_url": "http://localhost:8080",
     "stale_depth": 3,
