--- a/rosetta-cli-conf/mainnet/config.json
+++ b/rosetta-cli-conf/mainnet/config.json
@@ -14,6 +14,17 @@
   "compression_disabled": false,
   "memory_limit_disabled": false,
   "data_directory": ".rosetta-data",
+  "construction": {
+    "offline_url": "http://localhost:8080",
+    "stale_depth": 3,
+    "broadcast_limit": 5,
+    "constructor_dsl_file": "./avalanche.ros",
+    "end_conditions": {
+      "create_account": 10,
+      "transfer": 10
+    },
+    "prefunded_accounts": []
+  },
   "data": {
     "active_reconciliation_concurrency": 16,
     "inactive_reconciliation_concurrency": 4,
