--- a/.github/workflows/create-and-push-image.yml
+++ b/.github/workflows/create-and-push-image.yml
@@ -21,4 +21,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/avalanche-rosetta:latest
+          tags: avaplatform/avalanche-rosetta:latest
