updated name for testing

--- a/.github/workflows/create-and-push-image.yml
+++ b/.github/workflows/create-and-push-image.yml
@@ -5,7 +5,7 @@ on:
     branches: [ docker ]
 
 jobs:
-  CreateImage:
+  CreateAndPush:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
