--- a/.github/workflows/create-and-push-image.yml
+++ b/.github/workflows/create-and-push-image.yml
@@ -28,6 +28,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: avaplatform/avalanche-rosetta:${TAG}
-        env:
-          TAG: ${{ steps.get_version.outputs.VERSION }}
+          tags: avaplatform/avalanche-rosetta:${{ steps.get_version.outputs.VERSION }}
