--- a/rosetta-cli-conf/testnet/config.json
+++ b/rosetta-cli-conf/testnet/config.json
@@ -18,10 +18,11 @@
     "offline_url": "http://localhost:8080",
     "stale_depth": 5,
     "broadcast_limit": 5,
-    "constructor_dsl_file": "./avalanche_erc20.ros",
+    "constructor_dsl_file": "./avalanche.ros",
     "end_conditions": {
       "create_account": 10,
-      "simple_transfer_erc20": 10
+      "simple_transfer": 10,
+      "smart_contract_transfer": 10
     },
     "prefunded_accounts": []
   },
