--- a/rosetta-cli-conf/testnet/config_erc20.json
+++ b/rosetta-cli-conf/testnet/config_erc20.json
@@ -1,7 +1,7 @@
 {
   "network": {
     "blockchain": "Avalanche",
-    "network": "Mainnet"
+    "network": "Fuji"
   },
   "online_url": "http://localhost:8080",
   "http_timeout": 500,
@@ -18,15 +18,15 @@
     "offline_url": "http://localhost:8080",
     "stale_depth": 5,
     "broadcast_limit": 5,
-    "constructor_dsl_file": "./avalanche.ros",
+    "constructor_dsl_file": "./avalanche_erc20.ros",
     "end_conditions": {
       "create_account": 10,
-      "transfer": 10
+      "simple_transfer_erc20": 10
     },
     "prefunded_accounts": []
   },
   "data": {
-    "active_reconciliation_concurrency": 24,
+    "active_reconciliation_concurrency": 16,
     "inactive_reconciliation_concurrency": 4,
     "inactive_reconciliation_frequency": 250,
     "initial_balance_fetch_disabled": false,
@@ -44,9 +44,9 @@
     "coin_tracking_disabled": false,
     "results_output_file": "",
     "end_conditions": {
-      "tip": true,
       "reconciliation_coverage": {
         "coverage": 0.95,
+        "from_tip": true,
         "tip": true
       }
     }
