--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
           go-version: ${{ env.go_version }}
       - run: make build
   unit_test:
-    name: Test (Unit)
+    name: Unit Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -34,7 +34,7 @@ jobs:
           go-version: ${{ env.go_version }}
       - run: make test
   e2e_test:
-    name: Test (E2E)
+    name: E2E Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
