--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,8 @@ data
 .vscode*
 __debug_bin*
 
+# *.json is excluded above, make sure we include postman collection
+!postman/*.json
+
 # *.json is excluded above, make sure we include indexer testdata
 !service/backend/pchain/indexer/testdata/**
