/construction/hash and /construction/submit endpoints for c-chain atomic tx

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,6 +8,8 @@ run:
 issues:
   # Maximum count of issues with the same text. Set to 0 to disable. Default is 3.
   max-same-issues: 0
+  exclude:
+    - "G114: Use of net/http serve function that has no support for setting timeouts"
 
 linters:
   # please, do not use `enable-all`: it's deprecated and will be removed soon.
