--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,26 +10,65 @@ env:
   go_version: 1.19
 
 jobs:
-  Build:
+  Rosetta-Validation:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: ${{ env.go_version }}
-      - run: make build
-  Test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-go@v2
-        with:
-          go-version: ${{ env.go_version }}
-      - run: make test
-  Lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: golangci/golangci-lint-action@v2
-        with:
-          version: latest
+    - uses: actions/checkout@v3
+
+    - name: Start Rosetta Server
+      run: .github/scripts/runner.sh
+      shell: bash
+
+    # - name: Start a private ethereum network
+    #   uses: ./.github/actions/geth
+    #   id: geth
+
+    # - name: Sleep for 20 seconds
+    #   run: sleep 20s
+    #   shell: bash
+
+    # - name: Get latest block from geth node
+    #   run: |
+    #     curl -X POST "http://127.0.0.1:8546" --header 'Content-Type: application/json' --data '{"jsonrpc":"2.0","method":"eth_getBlockByNumber","params":["latest", true],"id":1}'
+    #   shell: bash
+
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install web3
+
+    # - name: Populate transactions
+    #   run: python .github/scripts/populate_txns.py
+    #   shell: bash
+
+    # - name: Start Rosetta Server
+    #   run: .github/scripts/setup.sh
+    #   shell: bash
+
+    # - name: Run Check:data test
+    #   run: .github/scripts/cli.sh
+    #   shell: bash
+
+  # Build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-go@v2
+  #       with:
+  #         go-version: ${{ env.go_version }}
+  #     - run: make build
+  # Test:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: actions/setup-go@v2
+  #       with:
+  #         go-version: ${{ env.go_version }}
+  #     - run: make test
+  # Lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: golangci/golangci-lint-action@v2
+  #       with:
+  #         version: latest
