--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
+      with:
+      repository: xiaying-peng/avalanche-rosetta-ci
 
     - name: Start Rosetta Server
       run: .github/scripts/runner.sh
