--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,10 +30,10 @@ jobs:
     #   run: sleep 20s
     #   shell: bash
 
-    # - name: Get latest block from geth node
-    #   run: |
-    #     curl -X POST "http://127.0.0.1:8546" --header 'Content-Type: application/json' --data '{"jsonrpc":"2.0","method":"eth_getBlockByNumber","params":["latest", true],"id":1}'
-    #   shell: bash
+    - name: Ping node
+      run: |
+        curl -X POST -k http://localhost:8081/v1/ping -d ''
+      shell: bash
 
     # - name: Install dependencies
     #   run: |
