--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,39 +18,22 @@ jobs:
       with:
         repository: xiaying-peng/avalanche-rosetta-ci
 
-    - name: Start Rosetta Server
+    - name: Start Avalanche Node
       run: .github/scripts/runner.sh
       shell: bash
-
-    # - name: Start a private ethereum network
-    #   uses: ./.github/actions/geth
-    #   id: geth
-
-    # - name: Sleep for 20 seconds
-    #   run: sleep 20s
-    #   shell: bash
 
     - name: Ping node
       run: |
         curl -X POST -k http://localhost:8081/v1/ping -d ''
       shell: bash
 
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install web3
+    - name: Start Rosetta Server
+      run: .github/scripts/setup.sh
+      shell: bash
 
-    # - name: Populate transactions
-    #   run: python .github/scripts/populate_txns.py
-    #   shell: bash
-
-    # - name: Start Rosetta Server
-    #   run: .github/scripts/setup.sh
-    #   shell: bash
-
-    # - name: Run Check:data test
-    #   run: .github/scripts/cli.sh
-    #   shell: bash
+    - name: Run Check:construction test
+      run: .github/scripts/cli.sh
+      shell: bash
 
   # Build:
   #   runs-on: ubuntu-latest
