--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,13 +27,18 @@ jobs:
         curl -X POST -k http://localhost:8081/v1/ping -d ''
       shell: bash
 
+    - name: Set up Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.18
+
     - name: Start Rosetta Server
       run: .github/scripts/setup.sh
       shell: bash
 
-    - name: Run Check:construction test
-      run: .github/scripts/cli.sh
-      shell: bash
+    # - name: Run Check:construction test
+    #   run: .github/scripts/cli.sh
+    #   shell: bash
 
   # Build:
   #   runs-on: ubuntu-latest
