--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,15 @@ jobs:
         curl -X POST -k http://localhost:8081/v1/ping -d ''
       shell: bash
 
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install web3
+
+    - name: Populate transactions
+      run: python .github/scripts/populate_txns.py
+      shell: bash
+
     - name: Set up Go
       uses: actions/setup-go@v2
       with:
