Enable check:construction in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
-    - name: Start Avalanche Node
+    - name: Start Avalanche node
       run: .github/scripts/runner.sh
       shell: bash
 
