--- a/rosetta-cli-conf/devnet/config.json
+++ b/rosetta-cli-conf/devnet/config.json
@@ -35,5 +35,31 @@
         }
       }
     ]
+  },
+  "data": {
+    "active_reconciliation_concurrency": 16,
+    "inactive_reconciliation_concurrency": 4,
+    "inactive_reconciliation_frequency": 250,
+    "initial_balance_fetch_disabled": false,
+    "log_blocks": false,
+    "log_transactions": false,
+    "log_balance_changes": false,
+    "log_reconciliations": false,
+    "ignore_reconciliation_error": false,
+    "exempt_accounts": "",
+    "bootstrap_balances": "",
+    "interesting_accounts": "",
+    "reconciliation_disabled": false,
+    "balance_tracking_disabled": false,
+    "historical_balance_disabled": false,
+    "coin_tracking_disabled": false,
+    "results_output_file": "",
+    "end_conditions": {
+      "reconciliation_coverage": {
+        "coverage": 0.95,
+        "from_tip": true,
+        "tip": true
+      }
+    }
   }
 }
