--- a/rosetta-cli-conf/testnet/config_erc20.json
+++ b/rosetta-cli-conf/testnet/config_erc20.json
@@ -1,7 +1,7 @@
 {
   "network": {
-    "blockchain": "Avalanche",
-    "network": "Fuji"
+    "blockchain": "Camino",
+    "network": "Columbus"
   },
   "online_url": "http://localhost:8080",
   "http_timeout": 500,
@@ -18,7 +18,7 @@
     "offline_url": "http://localhost:8080",
     "stale_depth": 5,
     "broadcast_limit": 5,
-    "constructor_dsl_file": "./avalanche_erc20.ros",
+    "constructor_dsl_file": "./camino_erc20.ros",
     "end_conditions": {
       "create_account": 10,
       "simple_transfer_erc20": 10
