--- a/rosetta-cli-conf/mainnet/config.json
+++ b/rosetta-cli-conf/mainnet/config.json
@@ -1,6 +1,6 @@
 {
   "network": {
-    "blockchain": "Avalanche",
+    "blockchain": "Camino",
     "network": "Mainnet"
   },
   "online_url": "http://localhost:8080",
@@ -18,7 +18,7 @@
     "offline_url": "http://localhost:8080",
     "stale_depth": 5,
     "broadcast_limit": 5,
-    "constructor_dsl_file": "./avalanche.ros",
+    "constructor_dsl_file": "./camino.ros",
     "end_conditions": {
       "create_account": 10,
       "transfer": 10
