--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ __debug_bin*
 
 # *.json is excluded above, make sure we include indexer testdata
 !service/backend/pchain/indexer/testdata/**
+!client/testdata/**
