--- a/Dockerfile.arm64
+++ b/Dockerfile.arm64
@@ -1,7 +1,7 @@
 # ------------------------------------------------------------------------------
 # Build avalanche
 # ------------------------------------------------------------------------------
-FROM arm64v8/golang:1.20.8-bullseye AS avalanche
+FROM arm64v8/golang:1.20.10 AS avalanche
 
 ARG AVALANCHE_VERSION
 
