--- a/.golangci.yml
+++ b/.golangci.yml
@@ -120,6 +120,7 @@ linters-settings:
   gosec:
     excludes:
       - G107 # Url provided to HTTP request as taint input https://securego.io/docs/rules/g107
+      - G115 # TODO: use typesafe conversion for uint64 -> int64
   importas:
     # Do not allow unaliased imports of aliased packages.
     no-unaliased: false
